--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,21 +1,18 @@
-# Modify the version if you don't use MRI 2.1.
-inherit_gem:
-  onkcop:
-    - "config/rubocop.yml"
-    - "config/rails.yml"
-    - "config/rspec.yml"
+require:
+  - rubocop-performance
+  - rubocop-rspec
 AllCops:
-  TargetRubyVersion: 2.5
-  # If you use RuboCop with Ruby on Rails, specify TargetRailsVersion(default: 5.0).
-  TargetRailsVersion: 5.1
-Rails:
-  # If you use RuboCop with Ruby on Rails, turn on this option.
-  Enabled: true
+  TargetRubyVersion: 2.6
 Naming/FileName:
   Exclude:
     - "Gemfile"
     - "Rakefile"
-Rails/HasManyOrHasOneDependent:
+    - "bin/*"
+Style/Documentation:
   Enabled: false
-Rails/SaveBang:
+Style/StringLiterals:
+  Enabled: false
+Metrics/LineLength:
+  Enabled: false
+Metrics/BlockLength:
   Enabled: false
